assets/radio: fix check allignment on safari assets/poll: fix spacing and mobile results fixes #3745

--- a/meinberlin/assets/scss/_form.scss
+++ b/meinberlin/assets/scss/_form.scss
@@ -54,7 +54,7 @@ div.cke_focus {
     margin: 0 0 $em-spacer 0;
     padding: $padding;
     list-style: none;
-    text-align: right;
+    text-align: center;
     background-color: $brand-danger;
     color: contrast-color($brand-danger);
 }
