--- a/meinberlin/assets/scss/components/_radio.scss
+++ b/meinberlin/assets/scss/components/_radio.scss
@@ -40,8 +40,9 @@ $checkbox-size: 20px;
         font-weight: 900;
         background-color: $brand-primary;
         color: contrast-color($brand-primary);
-        text-align: center;
         font-size: $font-size-sm;
+        line-height: 1.35*$spacer;
+        text-align: center;
     }
 }
 
