--- a/meinberlin/assets/scss/utility.scss
+++ b/meinberlin/assets/scss/utility.scss
@@ -97,7 +97,8 @@
     color: $brand-success;
 }
 
-.u-muted {
+.u-muted,
+.a4-muted {
     color: $text-color-gray;
 }
 
